# brainFuck

./: Cargo.toml
res/: life.bf  to_upper.bf
src/: ir.rs  lib.rs  main_bf.rs  main_ir.rs  opcode.rs
